fix(layout): fix wrap position

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -15,14 +15,14 @@
   position: relative;
   min-height: 100%;
   display: flex;
+  margin-left: 50px;
   flex-direction: column;
-  left: 204px;
+  left: 150px;
   right: 0;
   transition: left 0.3s ease-in-out;
 
-  @media (min-width: 768px) {
-    margin-left: 50px;
-    left: 154px;
+  @media (max-width: 768px) {
+    margin-left: 0;
   }
 }
 
